Timer ~ Body Overflow Fix 3
Previous fixes broke app. Added a #content to wrap all content.

--- a/scss/timer.scss
+++ b/scss/timer.scss
@@ -12,10 +12,13 @@ $active_transition_time: 0.1s;
 
 body {
     background-color: $main_color;
+    -webkit-user-select: none;
+}
+
+#content {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    -webkit-user-select: none;
 }
 
 #display {
